[package]
name = "grafana-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
clap = "=3.0.0-beta.2"
clap_generate = "=3.0.0-beta.2"
dirs = "3.0.2"
futures = "0.3.14"
shiplift = "0.7.0"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "grf"
path = "src/main.rs"
